# family-web-server

./: .env  .gitignore  Cargo.toml  README.md
migrations/2021-05-25-015440_create_users/: down.sql  up.sql
src/: device_tracking.rs  errors.rs  main.rs  models.rs  network.rs  parsepacket.rs  route_devices.rs  route_static.rs  route_users.rs  routes.rs  routes_db.rs  schema.rs  user.db  users.rs
static/: index.html
static/templates/: index.html
templates/: devices.html  index.html  old_index.html  profile.html  user_add.html  users.html
