[package]
name = "family-actix"
version = "0.1.0"
authors = ["gsuyemoto <gsuyemoto@gmail.com>"]
edition = "2018"

[dependencies]
actix-web = "3"
actix-http = "2"

futures = "0.1"
tokio = "0.2"

log = "0.4.14"
env_logger = "0.8.3"

askama = "0.10.5"

serde = "1.0"
serde_json = "1.0"
serde_derive = "1.0"

pnet = "0.28.0"
pnet_datalink = "0.28.0"

dotenv = "0.15.0"

listenfd = "0.3.3"
diesel = { version = "1.4.5", features = ["sqlite", "r2d2"]}
