[package]
name = "family-actix"
version = "0.1.2"
authors = ["gsuyemoto <gsuyemoto@gmail.com>"]
edition = "2018"

[dependencies]
actix-web = "4.3"
actix-http = "3"
actix-files = "0.6"

futures = "0.1"
tokio = { version = "1.24.2", features = ["time", "sync"] }

log = "0.4.14"
env_logger = "0.8.3"

askama = "0.10.5"

serde = "1.0"
serde_json = "1.0"
serde_derive = "1.0"

dotenv = "0.15.0"

listenfd = "0.3.3"
diesel = { version = "1.4.5", features = ["sqlite", "r2d2"]}

smoltcp = "0.7.3"
iptables = "0.4.3"
sudo = "0.5"
